--- a/src/main/resources/one/nfolio/rattel/setting.fxml
+++ b/src/main/resources/one/nfolio/rattel/setting.fxml
@@ -1,8 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 
-<AnchorPane fx:id="superRoot" opacity="0.5" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000; -fx-border-radius: 20px; -fx-background-radius: 20px;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="one.nfolio.controller.SettingController">
-
+<AnchorPane fx:id="superRoot" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(0, 0, 0, 0.7);" stylesheets="@style.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="one.nfolio.controller.SettingController">
+   <children>
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ゲーム設定" AnchorPane.topAnchor="0.0">
+         <font>
+            <Font size="70.0" />
+         </font>
+      </Text>
+      <Separator fx:id="separator" prefWidth="600.0" AnchorPane.topAnchor="75.0" />
+      <VBox prefHeight="400.0" prefWidth="600.0" AnchorPane.topAnchor="90.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="BGM：ボリューム" />
+            <Slider fx:id="bgmVolume" blockIncrement="0.1" max="1.0" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="マイク：ボリューム" />
+            <Slider fx:id="micVolume" blockIncrement="0.1" max="1.0" />
+            <CheckBox mnemonicParsing="false" prefHeight="29.0" prefWidth="146.0" text="ミュート" textFill="WHITE" />
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
