--- a/src/main/resources/one/nfolio/rattel/setting.fxml
+++ b/src/main/resources/one/nfolio/rattel/setting.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane fx:id="superRoot" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(0, 0, 0, 0.7);" stylesheets="@style.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="one.nfolio.controller.SettingController">
+<AnchorPane fx:id="superRoot" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(0, 0, 0, 0.7); -fx-border-color: #fff;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="one.nfolio.controller.SettingController">
    <children>
       <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="ゲーム設定" AnchorPane.topAnchor="0.0">
          <font>
